# openapi3

./: .travis.yml  CHANGELOG.md  README.md  cabal.haskell-ci  cabal.project  openapi3.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
examples/: hackage.hs
src/Data/: OpenApi.hs
src/Data/OpenApi/: Declare.hs  Internal.hs  Lens.hs  Operation.hs  Optics.hs  ParamSchema.hs  Schema.hs  SchemaOptions.hs
src/Data/OpenApi/Aeson/: Compat.hs
src/Data/OpenApi/Internal/: AesonUtils.hs  ParamSchema.hs  Schema.hs  TypeShape.hs  Utils.hs
src/Data/OpenApi/Internal/Schema/: Validation.hs
src/Data/OpenApi/Schema/: Generator.hs  Validation.hs
test/: GenericsSpec.hs  SpecCommon.hs
test/Data/: OpenApiSpec.hs
test/Data/OpenApi/: CommonTestTypes.hs  ParamSchemaSpec.hs  SchemaSpec.hs
test/Data/OpenApi/Schema/: GeneratorSpec.hs  ValidationSpec.hs
